Archive2/a3/2dd4ae403653ec/output
main.cpp:53:31: error: no member named 'push_back' in 'IPv6Map'
    for(auto & it : _ip) _obj.push_back( { it._ip{ ~_ip_vset_random( rng );
                         ~~~~ ^
main.cpp:53:47: error: no member named '_ip' in 'IPv6'
    for(auto & it : _ip) _obj.push_back( { it._ip{ ~_ip_vset_random( rng );
                                           ~~ ^
main.cpp:55:2: error: expected '}'
}
 ^
main.cpp:53:42: note: to match this '{'
    for(auto & it : _ip) _obj.push_back( { it._ip{ ~_ip_vset_random( rng );
                                         ^
main.cpp:55:2: error: expected '}'
}
 ^
main.cpp:48:12: note: to match this '{'
int main() {
           ^
4 errors generated.
